ckad/ingress-tls/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asia
  name: asia
  namespace: alderaan
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: asia
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: europe
  name: europe
  namespace: alderaan
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: europe
  type: ClusterIP
